--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Tasks#index</h1>
 <p>Find me in app/views/tasks/index.html.erb</p>
 
+<%=link_to "create a new task", new_task_path  %>
+
 <ul>
   <% @tasks.each do |task| %>
     <li><%= link_to link_to task.name, task_path(task) %></li>
