--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,3 +3,9 @@
 
 <h2><%= @task.name  %></h2>
 <h2><%= @task.description %></h2>
+<h2><%= @task.created_at %></h2>
+<h2><%= @task.updated_at %></h2>
+
+
+<%=link_to "View all tasks", tasks_path  %>
+
