--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to link_to task.name, task_path(task) %> <%= link_to link_to " edit", edit_task_path(task) %> </li>
+    <li><%= link_to link_to task.name, task_path(task) %> <%= link_to link_to " edit", edit_task_path(task) %>   <%= link_to "delete", task_path(task), method: 'delete', data: { confirm: "Are you sure?" } %> </li>
   <% end %>
 </ul>
 
